# llm

./: README.md  corpus.txt  main.py  model.py  process_data.py  pyproject.toml
configs/: infer_13b.yaml  model.qwen2_7b_instruct.yaml  runtime.windows.yaml  sft_13b.yaml  train_13b.yaml  train_70b.yaml  vision.siglip_384.yaml
docs/: windows_max_performance_checklist.md
scripts/: infer_local.bat  self_check_windows.py  smoke_train.bat  smoke_train.sh
scripts/bench/: bench_llm_decode.py  bench_llm_ingest.py  bench_siglip.py
scripts/setup/: windows_cpu_fallback.ps1  windows_llama_vulkan.ps1  windows_mlc_vulkan.ps1  windows_onnx_dml.ps1
src/llm/: __init__.py  batching.py  config.py  kv_cache.py  pipeline.py  sampling.py  tokenizer.py
src/llm/infer/: quant.py  server.py
src/llm/model/: decoder.py
src/llm/rag/: pipeline.py
src/llm/tensor/: attention.py  rope.py
src/llm/train/: __init__.py  dataloader.py  launch.py  optim.py  trainer.py
src/runtime/windows/: cpu_onednn_backend.py  llama_vulkan_backend.py  mlc_vulkan_backend.py  onnx_dml_backend.py
src/utils/: device_check.py  mem_planner.py  metrics.py  profiler_hooks.py
src/vision/: siglip_infer.py
